--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,7 +1,7 @@
 body {
-	max-width: 650px;
-	margin: 40px auto;
-	padding: 0 10px;
+	max-width: 65rem;
+	margin: 4rem auto;
+	padding: 0 1rem;
 	font: 18px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -24,10 +24,10 @@ p {
 }
 
 pre {
-	border: 1px solid;
+	border: 0.1rem solid;
 	padding: 1rem;
 	font-family: monospace;
-	font-size: 14px;
+	font-size: 1.4rem;
 	border-radius: 0.25rem;
 	color: white;
 	background-color: #2c2c2c;
@@ -36,7 +36,7 @@ pre {
 table,
 th,
 td {
-	border: 1px solid;
+	border: 0.1rem solid;
 	border-collapse: collapse;
 	padding: 0.25rem;
 	text-align: left;
