--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -36,8 +36,8 @@ pre {
 	border-radius: 0.25rem;
 	color: white;
 	background-color: #2c2c2c;
-	max-height: 30rem;
-	overflow-y: scroll;
+	max-height: 80rem;
+	overflow-x: scroll;
 }
 
 table,
