--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,11 +7,12 @@ html {
 body {
 	max-width: 65rem;
 	margin: 4rem auto;
-	padding: 0 1rem;
-	font: 18px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+	padding: 0 2rem;
+	font: 1.8rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	color: #444;
+	overflow-x: hidden;
 }
 
 code {
@@ -42,6 +43,7 @@ pre {
 	font-size: 1.4rem;
 	max-height: 80rem;
 	padding: 1rem;
+	overflow: auto;
 }
 
 pre > code {
@@ -55,6 +57,12 @@ td {
 	border-collapse: collapse;
 	padding: 0.25rem;
 	text-align: left;
+}
+
+@media only screen and (max-width: 600px) {
+	body {
+		font-size: 1.4rem;
+	}
 }
 
 /* @media (prefers-color-scheme: dark) {
