--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,10 +4,13 @@ html {
 	position: relative;
 }
 
-body {
+article {
 	max-width: 65rem;
 	margin: 4rem auto;
 	padding: 0 2rem;
+}
+
+body {
 	font: 1.8rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
