--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,7 +7,7 @@ html {
 article {
 	max-width: 65rem;
 	margin: 4rem auto;
-	padding: 0 2rem;
+	padding: 0 2rem 10rem;
 }
 
 body {
@@ -18,6 +18,13 @@ body {
 	overflow-x: hidden;
 }
 
+blockquote {
+	border-left: 1rem solid rgb(243, 243, 243);
+	font-style: italic;
+	margin-left: 1rem;
+	padding-left: 3rem;
+}
+
 code {
 	font-weight: bold;
 }
@@ -25,8 +32,13 @@ code {
 h1,
 h2,
 h3 {
-	line-height: 1.2;
+	color: #153486;
+	/* line-height: 1.2rem; */
 	margin: 4rem 0 2rem;
+}
+
+h1 {
+	font-size: 3.5rem;
 }
 
 img {
@@ -45,8 +57,8 @@ pre {
 	font-family: monospace;
 	font-size: 1.4rem;
 	max-height: 80rem;
-	padding: 1rem;
 	overflow: auto;
+	padding: 1rem;
 }
 
 pre > code {
@@ -56,8 +68,8 @@ pre > code {
 table,
 th,
 td {
-	border: 0.1rem solid;
 	border-collapse: collapse;
+	border: 0.1rem solid;
 	padding: 0.25rem;
 	text-align: left;
 }
