--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -53,12 +53,12 @@ img {
 }
 
 p {
-	margin: 0.5rem 0;
+	margin: 2rem 0;
 }
 
 pre {
-	background-color: #2c2c2c;
-	border-radius: 0.25rem;
+	background-color: #03000b;
+	border-radius: 0.75rem;
 	border: 0.1rem solid;
 	color: white;
 	font-family: monospace;
