--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -53,10 +53,11 @@ pre > code {
 table,
 th,
 td {
-	border: 0.1rem solid;
 	border-collapse: collapse;
+	border: 0.1rem solid;
 	padding: 0.25rem;
 	text-align: left;
+	width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
