--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,29 +1,53 @@
 html {
-	font-size: 62.5%;
+	/* font-size: 62.5%; */
 	min-height: 100%;
 	position: relative;
 }
 
 body {
-	max-width: 65rem;
-	margin: 4rem auto;
-	padding: 0 2rem;
-	font: 1.8rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+	margin: 0;
+}
+
+article {
+	max-width: 44rem;
+	margin: 2rem auto;
+	padding: 0 1.2rem 5rem;
+	/* font-size: 1.2rem; */
+	font: 1.1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	color: #444;
 	overflow-x: hidden;
 }
 
+blockquote {
+	border-left: 0.5rem solid rgb(239 248 255);
+	font-style: italic;
+	margin-left: 1rem;
+	padding-left: 3rem;
+}
+
 code {
+	color: green;
 	font-weight: bold;
 }
 
 h1,
 h2,
 h3 {
-	line-height: 1.2;
-	margin: 4rem 0 2rem;
+	color: #153486;
+	margin: 2rem 0 1rem;
+}
+
+h1 {
+	font-size: 2.2rem;
+}
+
+header {
+	display: flex;
+	padding: 2rem 12rem;
+	justify-content: space-between;
+	align-items: center;
 }
 
 img {
@@ -31,16 +55,16 @@ img {
 }
 
 p {
-	margin: 0.5rem 0;
+	margin: 1.25rem 0;
 }
 
 pre {
-	background-color: #2c2c2c;
-	border-radius: 0.25rem;
+	background-color: #03000b;
+	border-radius: 0.75rem;
 	border: 0.1rem solid;
 	color: white;
 	font-family: monospace;
-	font-size: 1.4rem;
+	font-size: 1rem;
 	max-height: 80rem;
 	overflow: auto;
 	padding: 1rem;
@@ -61,8 +85,12 @@ td {
 }
 
 @media only screen and (max-width: 600px) {
-	body {
-		font-size: 1.6rem;
+	article {
+		font-size: 1rem;
+	}
+
+	header {
+		padding: 0;
 	}
 }
 
