--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,4 @@
 html {
-	/* font-size: 62.5%; */
 	min-height: 100%;
 	position: relative;
 }
@@ -12,7 +11,6 @@ article {
 	max-width: 44rem;
 	margin: 2rem auto;
 	padding: 0 1.2rem 15rem;
-	/* font-size: 1.2rem; */
 	font: 1.1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -84,10 +82,9 @@ table,
 th,
 td {
 	border-collapse: collapse;
-	border: 0.1rem solid;
-	padding: 0.25rem;
+	border: 0.1rem solid #9e9e9e;
+	padding: 0.25rem .5rem;
 	text-align: left;
-	width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -100,12 +97,15 @@ td {
 	}
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
 	body {
-		color: #ccc;
-		background: black;
+		background: rgb(16, 16, 16);
 	}
 
+	article {
+		color: rgb(209, 209, 209);
+	}
+	
 	pre {
 		border: none;
 		background-color: #2c2c2c;
@@ -118,4 +118,11 @@ td {
 	a:visited {
 		color: #ccf;
 	}
-} */
+
+	h1,
+	h2,
+	h3 {
+		color: #789cff;
+		margin: 2rem 0 1rem;
+	}
+}
